# oficp

./: .clang-format  .travis.yml  CMakeLists.txt  main.c
include/: shared.h
src/: shared.c
